secrets moved to env

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,10 @@ services:
       - ./db:/app/db
     environment:
       CELERY_BROKER_URL: 'redis://redishost:6379/0'
+      GOOGLE_CLIENT_ID: '858644449172-nvvsa0mu677rg3a8fr9nsv1shk64re8u.apps.googleusercontent.com'
+      GOOGLE_CLIENT_SECRET: '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'
+      GITHUB_CLIENT_ID: '16226058214306527e19'
+      GITHUB_CLIENT_SECRET: 'acd813b972ad12955fd863b39c6fca8e065bb53a'
   celery:
     build: .
     command:
@@ -37,6 +41,9 @@ services:
       - ./db:/app/db
     environment:
       CELERY_BROKER_URL: 'redis://redishost:6379/0'
+      EMAIL_HOST_USER: '0144melih@gmail.com' 
+      EMAIL_HOST_PASSWORD: 'iqyb clut duhq sahb'
+      DEFAULT_FROM_EMAIL: '0144melih@gmail.com'
   redis:
     hostname: redishost
     image: "redis:alpine"
